Switch to custom container